week02 modify